<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="choose_profile">Choose your profile.</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_clothes">ClothesActivity</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_date">Date</string>


    <!-- Picking clothes type -->
    <string name="pick_type">Pick a Type of Clothing</string>
    <string-array name="clothes_type_array">
        <item>UpperClothes</item>
        <item>LowerClothes</item>
        <item>Shoes</item>
        <item>Accessories</item>
    </string-array>

    <string name="default_select_type">Please Select a Type</string>


    <!-- Proceed-->
    <string name="proceed">Next</string>


    <!-- Types of fields -->
    <string name="fieldPrompt">WE WANT TO KNOW ABOUT YOUR ITEMS!</string>
    <string name="brand">Brand</string>
    <string name="colour">Colour</string>
    <string name="size">Size</string>
    <string name="type">Type</string>
    <string name="title_activity_edit_clothes_result">EditClothesResult</string>
    <string name="search_msg">Search for your clothing by providing the fields.</string>
</resources>
